--- a/galleria/src/main/resources/templates/opera/opere.html
+++ b/galleria/src/main/resources/templates/opera/opere.html
@@ -37,17 +37,17 @@
 					<span class="sr-only">Toggle navigation</span> Menu <i
 						class="fa fa-bars"></i>
 				</button>
-				<a class="navbar-brand page-scroll" href="index.html">HOME</a>
+				<a class="navbar-brand page-scroll" href="/home">HOME</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="topnav">
   			<ul class="nav navbar-nav navbar-left">
-					<li><a class="page-scroll" href="/artista">Artista</a></li>
-					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+					<li><a class="page-scroll" href="artisti">Artisti</a></li>
+<!-- 					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
 					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
 			 		<li><a class="page-scroll" href="/user">REGISTRATI</a></li>
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li>  -->
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
