riassegnate funzionalità a index, confermati collegamenti per user/menu

--- a/galleria/src/main/resources/templates/accesso.html
+++ b/galleria/src/main/resources/templates/accesso.html
@@ -7,13 +7,13 @@
 </head>
 <body>
 <div class="topnav">
-  <a href="home">Home</a>
+  <a href="/">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
   <a class="active" href="accedi">Login/SignUp</a>
  <!--  <a href="signUp">Sign-up</a> -->
-  <a href="admin">Amministratore</a>
+  <a href="log_admin"><b>Amministratore</b></a>
 </div>
 <div id="wrapper">
  <font size="6">
