--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -11,7 +11,7 @@
 <body>
 <div class="topnav">
   			<ul class="nav navbar-nav navbar-left">
- 				 <li><a class="page-scroll" href="/home">Home</a></li>
+ 				 <li><a class="page-scroll" href="/">Home</a></li>
 <!-- 					<li><a class="page-scroll" href="/artista">Artista</a></li>
 					<li><a class="page-scroll" href="/opera">Opera da inserire</a></li> -->
 					 <li><a class="page-scroll" href="/user/opere">Opere</a></li>
