--- a/galleria/src/main/resources/templates/login.html
+++ b/galleria/src/main/resources/templates/login.html
@@ -33,8 +33,8 @@
 					<li><a class="page-scroll" href="/artista">Artista</a></li>
 					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
 					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-			 		<li><a class="page-scroll" href="/user">REGISTRATI</a></li>
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+			 		<li><a class="page-scroll" href="/accedi">REGISTRATI</a></li>
+					<li><a class="page-scroll" href="/log_admin">AMMINISTRATORE</a></li> 
 				</ul>
 </div>
     <div>
