--- a/galleria/src/main/resources/templates/opera/modificaO.html
+++ b/galleria/src/main/resources/templates/opera/modificaO.html
@@ -5,7 +5,32 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body style="background-image: url('https://www.premioceleste.it/_files/opere/2013_53521_199648.jpg')">
-
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
+					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
+                </div>
 	<form action="#" th:action="@{/opera/modificaO(id=${opera.id})}" th:object="${opera}"
 		method="post" >
 		<div>
@@ -32,13 +57,6 @@
 						th:text="${artista.nome} +' '+ ${artista.cognome}"></option>
 				</select>
 			</div>
-			<!-- <div>
-				<span th:text="#{label.stanza}">Stanza:</span> <select
-					th:field="*{stanza}">
-					<option th:each="stanza : ${stanze}" th:value="${stanza.id}"
-						th:text="${stanza.nome}"></option>
-				</select>
-			</div> -->
 			<div>
 			<span th:text="#{label.url}">Url: </span> <span><input
 				type="text" th:field="*{url}" /></span> <span
