--- a/galleria/src/main/resources/templates/opera/opereA.html
+++ b/galleria/src/main/resources/templates/opera/opereA.html
@@ -5,6 +5,32 @@
 <title>Opere Inserite</title>
 </head>
 <body>
+ <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
+					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
+                </div>
 	<h1>Opere inserite nel sistema</h1>
 	<p>
 		<span th:text="#{label.nome}">Lista opere</span>
