--- a/galleria/src/main/resources/templates/artista/artistiAdmin.html
+++ b/galleria/src/main/resources/templates/artista/artistiAdmin.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <meta charset="utf-8" />
 <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
 <link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Opere</title>
+<title>Galleria/Home/Artista</title>
 
 <meta
 	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
@@ -75,59 +73,21 @@
 			
 <blockquote class="blockquote blockquote">
 <h1 class="text-left">
-				<em>Opere</em></h1>
-				  <footer class="blockquote-footer"><cite title="Source Title">Qui di seguito trovi le opere inserite</cite></footer>
+				<em>Artist</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Artista nel sistema</cite></footer>
 </blockquote>
-			<ul>
-				<div th:each="opera : ${opere}">
-					<div class="row">
-						<div class="col-md-4 col-sm-4">
-
-							<a th:href="@{/opera/infoOpera(id=${opera.id})}">
-					
-								<img th:src="${opera.url}"
-								style="height: 236px; width: 304" class="img-circle" />
-							</a>
-						</div>
-						<div >
-							<div >
-								<h2 class="text-left">
-									<a th:text="${opera.titolo}"
-										th:href="@{/opera/infoOpera(id=${opera.id})}"></a>
-									<div class="space"></div>
-								</h2>
-							</div>
-						</div>
-					</div>
-				</div>
-			</ul>
-		</div>
-		<div class="space"></div>
-	</div>
-<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
-
-
-
-	<div class="footer">
-		<div class="overlayer">
-			<div class="container">
-				<div class="row">
-					<div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
+	<p>
+		<span th:text="#{label.nome}">Lista artisti</span>
+	</p>
+	<ul>
+		<th:foreach th:each="artista : ${artisti}">
+			<li><a th:text="${artista.nome} +' '+ ${artista.cognome}"
+				th:href="@{/artista/resultsAutore(id=${artista.id})}"></a> <a
+				th:href="@{/artista/cancella(id=${artista.id})}"><span><input
+						type="submit" name="submit" value="cancella" /></span></a>
+				<a th:href="@{/artista/modificaArtista(id=${artista.id})}"><span><input
+						type="submit" name="submit" value="modifica" /></span></a></li>
+		</th:foreach>
+	</ul>
 </body>
-
-<script src="vendor/jquery/jquery.js" type="text/javascript"></script>
-<script src="vendor/jquery/jquery.min.js" type="text/javascript"></script>
-
-<script src="vendor/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-<script src="js/gsdk-checkbox.js"></script>
-<script src="js/gsdk-radio.js"></script>
-<script src="js/gsdk-bootstrapswitch.js"></script>
-<script src="js/get-shit-done.js"></script>
-<script src="js/custom.js"></script>
-
 </html>
