--- a/galleria/src/main/resources/templates/artista/formartista.html
+++ b/galleria/src/main/resources/templates/artista/formartista.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <meta charset="utf-8" />
 <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
@@ -24,9 +23,10 @@
 	rel='stylesheet' type='text/css' />
 
 </head>
-<body id="page-top" style="background-image: url('https://www.premioceleste.it/_files/opere/2013_53521_199648.jpg')">
 
-	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+<body style="background-image: url('http://picslife.ru/wp-content/uploads/2012/11/krasivyie-kartinyi-maslom-hudozhnika-leonida-afremova_2.jpg')">
+
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -38,22 +38,45 @@
 				<a class="navbar-brand page-scroll" href="/">HOME</a>
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="topnav">
-  			<ul class="nav navbar-nav navbar-left">
- 				 <li><a class="page-scroll" href="/">Home</a></li>
-					<li><a class="page-scroll" href="/artista">Artista</a></li>
-					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-			 		<li><a class="page-scroll" href="/user">REGISTRATI</a></li>
+			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
 					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-				</ul>
-			</div>
-			
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
+                </div>
 		</div>
-		
+		<!-- /.container-fluid -->
 	</nav>
-	<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
+	
+<div class="main">
+
+<br></br><br></br>		
+<blockquote class="blockquote blockquote">
+<h1 class="text-left">
+				<em>Artist</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Artista</cite></footer>
+</blockquote>
+
 	
 	<form class="form-horizontal" action="#" th:action="@{/artista}" th:object="${artista}"
 		method="post">
@@ -67,8 +90,8 @@
 		<div>
 			<div class="form-group"
 					th:class="${#fields.hasErrors('nome')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-2 control-label">Nome:</label>
-					<div class="col-sm-5">
+					<label class="col-sm-4 control-label">Nome:</label>
+					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{nome}"
 							th:errorclass="has-error" /> <span class="help-block">
 							<ul>
@@ -79,8 +102,8 @@
 				</div>
 			<div class="form-group"
 					th:class="${#fields.hasErrors('cognome')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-2 control-label">Cognome:</label>
-					<div class="col-sm-5">
+					<label class="col-sm-4 control-label">Cognome:</label>
+					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{cognome}"
 							th:errorclass="has-error" /> <span class="help-block">
 							<ul>
@@ -91,8 +114,8 @@
 				</div>
 			<div class="form-group"
 					th:class="${#fields.hasErrors('nazionalita')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-2 control-label">Nazionalita:</label>
-					<div class="col-sm-5">
+					<label class="col-sm-4 control-label">Nazionalita:</label>
+					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{nazionalita}"
 							th:errorclass="has-error" /> <span class="help-block">
 							<ul>
@@ -104,8 +127,8 @@
 			<div>
 					<div class="form-group"
 					th:class="${#fields.hasErrors('annoNascita')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-2 control-label">Anno Nascita:</label>
-					<div class="col-sm-5">
+					<label class="col-sm-4 control-label">Anno Nascita:</label>
+					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{annoNascita}"
 							th:errorclass="has-error" /> <span class="help-block">
 							<ul>
@@ -133,8 +156,8 @@
   				
 			<div class="form-group"
 					th:class="${#fields.hasErrors('annoMorte')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-2 control-label">Anno Morte:</label>
-					<div class="col-sm-5">
+					<label class="col-sm-4 control-label">Anno Morte:</label>
+					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{annoMorte}"
 							th:errorclass="has-error" /> <span class="help-block">
 							<ul>
@@ -143,13 +166,25 @@
 						</span>
 					</div>
 				</div>
+				
+				<!-- <div class="form-group">
+						<label class="col-sm-4 control-label glyphicon glyphicon-camera"> Url: </label>
+						<div class="col-sm-5">
+							<input	type="text" class="form-control" th:field="*{url}" />			
+							<span th:if="${#fields.hasErrors('url')}" th:text="#{label.mandatory}">Error</span>
+							</div>
+		 				</div> -->
+				
 		</div>
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav navbar-middle">
-					<button type="submit">Invia</button>
-					</ul>
-							</div></div>
+					<ul class="pager">
+					<li class="previous">
+				<button type="submit" class="btn btn-primary">Invia</button>
+					</li>
+				</ul>
+					</div> 
+				</div>
 			</form>
 			
 			 <div class="footer">
@@ -161,7 +196,7 @@
 			</div>
 		</div>
 	</div>
-        
+  </div>	      
 	
 	
 	
