--- a/galleria/src/main/resources/templates/artista/modificaArtista.html
+++ b/galleria/src/main/resources/templates/artista/modificaArtista.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
 <meta charset="utf-8" />
 <link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
 <link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Opere</title>
+<title>Galleria/Home/Artista</title>
 
 <meta
 	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
@@ -48,7 +46,7 @@
                     </li>
                     <li>
                         <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-                    </li>
+                    
                    
 			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
 					
@@ -69,65 +67,54 @@
 		</div>
 		<!-- /.container-fluid -->
 	</nav>
-	<br></br><br></br><br></br><br></br>
-	<div>
-		<div class="container tim-container">
-			
+	
 <blockquote class="blockquote blockquote">
 <h1 class="text-left">
-				<em>Opere</em></h1>
-				  <footer class="blockquote-footer"><cite title="Source Title">Qui di seguito trovi le opere inserite</cite></footer>
+				<em>Artist</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Artista</cite></footer>
 </blockquote>
-			<ul>
-				<div th:each="opera : ${opere}">
-					<div class="row">
-						<div class="col-md-4 col-sm-4">
-
-							<a th:href="@{/opera/infoOpera(id=${opera.id})}">
-					
-								<img th:src="${opera.url}"
-								style="height: 236px; width: 304" class="img-circle" />
-							</a>
-						</div>
-						<div >
-							<div >
-								<h2 class="text-left">
-									<a th:text="${opera.titolo}"
-										th:href="@{/opera/infoOpera(id=${opera.id})}"></a>
-									<div class="space"></div>
-								</h2>
-							</div>
-						</div>
-					</div>
-				</div>
-			</ul>
-		</div>
-		<div class="space"></div>
-	</div>
-<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
 
 
-
-	<div class="footer">
-		<div class="overlayer">
-			<div class="container">
-				<div class="row">
-					<div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
-				</div>
+<form action="#" th:action="@{/artista/modificaArtista(id=${artista.id})}" th:object="${artista}"
+		method="post">
+		<div>
+			<div>
+				<span th:text="#{label.nome}">Nome: </span> <span><input
+					type="text" th:field="*{nome}" /></span> <span
+					th:if="${#fields.hasErrors('nome')}" th:text="#{label.mandatory}">Error</span>
 			</div>
+			<div>
+				<span th:text="#{label.cognome}">Cognome: </span> <span><input
+					type="text" th:field="*{cognome}" /></span> <span
+					th:if="${#fields.hasErrors('cognome')}"
+					th:text="#{label.mandatory}">Error</span>
+			</div>
+			<div>
+				<span th:text="#{label.nazionalita}">Nazionalita: </span> <span><input
+					type="text" th:field="*{nazionalita}" /></span> <span
+					th:if="${#fields.hasErrors('nazionalita')}"
+					th:text="#{label.mandatory}">Error</span>
+			</div>
+			<div>
+				<span th:text="#{label.annoNascita}">AnnoNascita: </span> <span><input
+					type="text" th:field="*{annoNascita}" /></span> <span
+					th:if="${#fields.hasErrors('annoNascita')}"
+					th:text="#{label.data}">Error</span>
+			</div>
+			<span th:text="#{label.annoMorte}">AnnoMorte: </span> <span><input
+				type="text" th:field="*{annoMorte}" /></span> <span
+				th:if="${#fields.hasErrors('annoMorte')}" th:text="#{label.data}">Error</span>
 		</div>
-	</div>
-	
+		<div>
+			<span th:text="#{label.url}">Url: </span> <span><input
+				type="text" th:field="*{url}" /></span> <span
+				th:if="${#fields.hasErrors('url')}" th:text="#{label.mandatory}">Error</span>
+		</div>
+		<div>
+			<input type="submit" name="submit"/>
+		</div>
+	</form>
+
+
 </body>
-
-<script src="vendor/jquery/jquery.js" type="text/javascript"></script>
-<script src="vendor/jquery/jquery.min.js" type="text/javascript"></script>
-
-<script src="vendor/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-<script src="js/gsdk-checkbox.js"></script>
-<script src="js/gsdk-radio.js"></script>
-<script src="js/gsdk-bootstrapswitch.js"></script>
-<script src="js/get-shit-done.js"></script>
-<script src="js/custom.js"></script>
-
 </html>
