--- a/galleria/src/main/resources/templates/artista/resultsArtista.html
+++ b/galleria/src/main/resources/templates/artista/resultsArtista.html
@@ -39,82 +39,112 @@
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="topnav">
-  			<ul class="nav navbar-nav navbar-left">
- 				 <li><a class="page-scroll" href="/">Home</a></li>
-					<li><a class="page-scroll" href="/artista">Artista</a></li>
-					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-			 		<li><a class="page-scroll" href="/user">REGISTRATI</a></li>
+			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
 					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-				</ul>
-			</div>
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
+                </div>
 			
 		</div>
 		
 	</nav>
 
 
-<div class="main">
+		<div class="center">
 		<div class="container tim-container">
-	<br><br></br></br>
-		<h1 class="text-left">
-				Opere<small class="subtitle">Home/Artista</small>
-			</h1>
-    <h1>L artista inserito:</h1>
-  
-           <ul>
-           <div>
-		<!-- <img th:src="${opera.url}" alt="opera immagine"
-			style="height: 250px; width: 400px" /> -->
+	<br><br></br></br><br></br><br></br><br></br>
+		<blockquote class="blockquote blockquote">
+<h1 class="text-left">
+				<em>Artist</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Artista</cite></footer>
+</blockquote>
+	<table class="table table-hover">
+             <ul>
+   		<!-- <img th:src="${opera.url}" alt="opera immagine"
+			style="height: 300px; width: 300px" /> -->
 			
+		<!-- <img th:src="${artista.url}" style="height: 300px; width: 300px" /> -->
+		<tr>
+			<td>
 		<li th:text="#{label.nome} +' '+ ${artista.nome}"></li>
-		</div>
-		
+			</td>
+		</tr>
+		<tr>
+			<td>
 		<li th:text="#{label.cognome} +' '+ ${artista.cognome}"></li>
+			</td>
+		</tr>
+		<tr>
+			<td>
 		<li th:text="#{label.annoNascita} +' '+ ${artista.annoNascita}"></li>
+			</td>
+		</tr>
+		
+		<tr>
+			<td>
 		<li th:text="#{label.annoMorte} +' '+ ${artista.annoMorte}"></li>
-		<!-- <li><a th:text="'artista'+ ${opera.artista.nome} +' '+ ${opera.artista.cognome}"
-				th:href="@{/artista/formA(id=${opera.artista.id})}"></a></li> -->
-	
-	 
-		<!-- <li><a th:text="'Stanza: ' + ${opera.stanza.nome}" 
-			th:href="@{/stanza/resultsStanza(id=${opera.stanza.id})}"></a></li> -->
+			</td>
+		</tr>
+		<!-- <ul>
+			<th:foreach th:each="opera : ${artista.operas}">
+				<li><a th:text="${opera.titolo}"
+					th:href="@{/opera/infoOpera(id=${opera.id})}"></a> <a
+					th:href="@{/opera/cancella(id=${opera.id})}"><span><input
+							type="submit" name="submit" value="cancella" /></span></a></li>
+			</th:foreach>
+		</ul> -->
+
+
+			</ul>
+			</table>
+			<br><br></br></br>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="pager">
+ 							<li class="previous"><a href="/artista">Ritorna indietro</a></li>
+							</ul>
+			</div>
 			
-           
-			
-			    <a th:href="@{/opera}"> <span><input type="submit" name="submit"
-			value="ritorna indietro" /></span></a>
-	</ul>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="pager">
+ 							<li class="previous"><a href="/">Home</a></li>
+							</ul>
+			</div>
+	<br><br></br></br><br></br><br></br><br></br><br><br></br></br><br></br><br></br><br></br>
         </div>
       </div>  
-      <div class="footer">
+     <div class="footer">
 		<div class="overlayer">
 			<div class="container">
+				<br></br><br></br><br></br>
 				<div class="row">
 					<div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
 				</div>
 			</div>
 		</div>
 	</div>
+      
         
 </body>
-<!-- <body>
-	<ul>
-		<li th:text="#{label.nome} +' '+ ${artista.nome}"></li>
-		<li th:text="#{label.cognome} +' '+ ${artista.cognome}"></li>
-		<li th:text="#{label.annoNascita} +' '+ ${artista.annoNascita}"></li>
-		<li th:if="${artista.annoMorte}" th:text="#{label.annoMorte} +' '+ ${artista.annoMorte}"></li>
-	<ul>
-		<th:foreach th:each="opera : ${artista.opere}">
-			<li><a th:text="${opera.nome}" th:href="@{/opera/resultsOpera(id=${opera.id})}"></a>
-				<a th:href="@{/opera/cancella(id=${opera.id})}"><span><input
-						type="submit" name="submit" value="cancella" /></span></a></li>
-		</th:foreach>
-	</ul>
-	</ul>	
-	<a th:href="@{/}"> <span><input
-						type="submit" name="submit" value="ritorna alla Home" /></span></a>
 
-</body> -->
 </html>
