--- a/galleria/src/main/resources/templates/error.html
+++ b/galleria/src/main/resources/templates/error.html
@@ -1,64 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-<style>body {
-    background-color: 	#FFDAB9;
-}</style>
-    <meta charset="UTF-8"/>
-    <title th:text="${status}">404</title>
 
-    <link href="/webjars/materializecss/0.96.0/css/materialize.css" type="text/css" rel="stylesheet"
-          media="screen,projection"/>
+<head>
+<meta charset="utf-8" />
+<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
+<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<title>Galleria/Home/Opere</title>
+
+<meta
+	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+	name='viewport' />
+<meta name="viewport" content="width=device-width" />
+
+<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+<link href="css/gsdk.css" rel="stylesheet" />
+<link href="css/demo.css" rel="stylesheet" />
+<link href="css/siw.css" rel="stylesheet" />
+<!--     Font Awesome     -->
+<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
+<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
+	rel='stylesheet' type='text/css' />
+
 </head>
-<body>
 
-<div class="container-fluid">
-            <div class="navbar-header">
-            <div class="navbar-header">
-      			<a class="navbar-brand" >Midnight</a>
-   				 </div>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="/">Home</a>
-            </div>
-
-            
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
-                    
-                    <li>
-                        <a class="page-scroll" href="/user/artisti">Artists</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/citazioni">Quotes</a>
-                    </li>
-                     
-                    <li>
-                        <a class="page-scroll" href="/user/opere">Works of art</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/accedi">Register here!</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/accedi">Login</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/accedi_admin">Administrator</a>
-                    </li>
-                    <li sec:authorize="isAuthenticated()">
-											<a class="page-scroll" href="/logout">logout</a>			
-                    </li>
-                    
-                </ul>
-            </div></div>
+<body id="page-top" style="background-image: url('https://s-media-cache-ak0.pinimg.com/originals/5b/97/22/5b97226057c25c682bfe701638d79939.png')">
 <div class="row">
+<br></br><br></br><br></br><br></br><br></br>
     <h1 align="center" class="indigo-text center" th:text="${error}">Not found</h1>
 
     <p align="center" class="col s12 center" ><!-- th:text="${message}" -->
-     <font size="12">  The resource you are looking for doesn't exist!</font> 
+     <font size="12">  The resource you are looking for doesn't exist!
+<br></br><br></br><br></br><br></br><br></br>
+                         <center><a href="/"><large>Home</large></a></center>
+     </font> 
     </p>
+    			<font size="12">	 </font> 
+				
+			
 </div>
 </body>
 </html>
