--- a/galleria/src/main/resources/templates/login.html
+++ b/galleria/src/main/resources/templates/login.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 <meta charset="utf-8" />
@@ -6,7 +7,7 @@
 <link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Artista</title>
+<title>Galleria/Home/Opere</title>
 
 <meta
 	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
@@ -14,6 +15,7 @@
 <meta name="viewport" content="width=device-width" />
 
 <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+<link href="css/gsdk.css" rel="stylesheet" />
 <link href="css/demo.css" rel="stylesheet" />
 <link href="css/siw.css" rel="stylesheet" />
 <!--     Font Awesome     -->
@@ -21,44 +23,89 @@
 <link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
 	rel='stylesheet' type='text/css' />
 
-<link rel="stylesheet" href="css/admin.css" />
-<title>Login</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  </head>
-<body id="page-top" style="background-image: url('https://www.premioceleste.it/_files/opere/2013_53521_199648.jpg')">
+</head>
 
-<div class="topnav">
-  <ul class="nav navbar-nav navbar-left">
- 				 <li><a class="page-scroll" href="/">Home</a></li>
-					<li><a class="page-scroll" href="/artista">Artista</a></li>
-					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-			 		<li><a class="page-scroll" href="/logout">LogOut modifica fatta in login-html</a></li>
-					<li><a class="page-scroll" href="/log_admin">AMMINISTRATORE</a></li> 
-				</ul>
-</div>
-    <div>
-        <form  name="f" th:action="@{/login}" method="post">      		
-		<div>         
-            <fieldset>
-                <legend>Please Login</legend>
-                <div  th:if="${param.error}" class="alert alert-error">    
-                 <label class="col-sm-2 control-label"> Invalid username and password.</label> 
+<body style="background-image: url('http://picslife.ru/wp-content/uploads/2012/11/krasivyie-kartinyi-maslom-hudozhnika-leonida-afremova_2.jpg')">
+<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span> Menu <i
+						class="fa fa-bars"></i>
+				</button>
+				<a class="navbar-brand page-scroll" href="/">HOME</a>
+			</div>
+
+			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
+					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
                 </div>
-               <div th:if="${param.logout}" class="alert alert-success"> 
-                    You have been logged out.
-                </div>
-                
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username"/>        
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password"/>    
-                <div class="form-actions">
-                    <button type="submit" class="btn">Log in</button>
-                </div>
-            </fieldset>
-           </div>
-        </form>
-        </div>
-  </body>
+		</div>
+		
+		<!-- /.container-fluid -->
+	</nav>
+<div>
+		<div class="container tim-container">
+			<br></br><br></br><br></br><br></br>
+		
+<blockquote class="blockquote blockquote">
+<h1 class="text-left">                                 
+				<em>Login</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Introdure dati d accesso</cite></footer>
+</blockquote>
+		<div>
+		<div class="container">
+			<div class="middle">
+				<div id="login">
+					<form th:action="@{/login}" method="post">
+					<div class="form-group">
+						<label class="col-sm-1 control-label">Username:</label>
+							<div class="col-sm-3">
+							<input type="text" name="username" placeholder="username"></input>
+						</div>
+						</div>
+						<div class="form-group">
+						<label class="col-sm-1 control-label">Password:</label>
+							<span class="fa fa-lock"></span><input type="password"
+								name="password" placeholder="password"></input>
+					</div>
+					</form>
+					</div><div th:if="${param.error}">
+						<h1 style="color: red">Username o Password errati</h1>
+					</div>
+				</div>
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<button type="submit" class="btn btn-secondary">Accedi</button>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+	</div>
+	
+</body>
 </html>
