--- a/galleria/src/main/resources/templates/user/info.html
+++ b/galleria/src/main/resources/templates/user/info.html
@@ -1,28 +1,87 @@
- <!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<style>
 
-</style>
-<link rel="stylesheet" href="css/index.css" />
-    <title></title>
+<head>
+<meta charset="utf-8" />
+<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
+<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<title>Galleria/Home/Opere</title>
+
+<meta
+	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
+	name='viewport' />
+<meta name="viewport" content="width=device-width" />
+
+<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+<link href="css/gsdk.css" rel="stylesheet" />
+<link href="css/demo.css" rel="stylesheet" />
+<link href="css/siw.css" rel="stylesheet" />
+<!--     Font Awesome     -->
+<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
+<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
+	rel='stylesheet' type='text/css' />
+
 </head>
-<body>
-<div class="topnav">
-  <ul class="nav navbar-nav navbar-right">
- 				 <li><a class="page-scroll" href="/">Home</a></li>
-					<li><a class="page-scroll" href="/artista">Artista</a></li>
-					 <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-					 <li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-			 		<li><a class="page-scroll" href="/user">REGISTRATI</a></li>
+
+<body style="background-image: url('http://picslife.ru/wp-content/uploads/2012/11/krasivyie-kartinyi-maslom-hudozhnika-leonida-afremova_2.jpg')">
+
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span> Menu <i
+						class="fa fa-bars"></i>
+				</button>
+				<a class="navbar-brand page-scroll" href="/">HOME</a>
+			</div>
+
+			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-left">
+                    
+                    <li>
+                        <a class="page-scroll" href="/artista">Artista</a>
+                    </li>
+                    <li>
+                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                    </li>
+                   
+			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+					
 					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-				</ul>
-</div>
+                    <li>
+                        <a class="page-scroll" href="/opere">Opere</a>
+                    </li>
+                    
+                    <li>
+                        <a class="page-scroll" href="/user">Registrati</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/login">Autenticazione</a>
+                    </li>
+             
+                </ul>
+                </div>
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
+	<br></br><br></br><br></br><br></br>
 	<div>
-    	<p th:text="'First name: ' + ${user.firstname}" />
+		<div class="container tim-container">
+			
+<blockquote class="blockquote blockquote">
+<h1 class="text-left">
+				<em>Opere</em></h1>
+				  <footer class="blockquote-footer"><cite title="Source Title">Qui di seguito trovi le opere inserite</cite></footer>
+</blockquote>
+	<div>
+    	<p th:text="'First name: ' + ${user.firstName}" />
     </div>
 	<div>
-    	<p th:text="'Lastname: ' + ${user.lastname}" />
+    	<p th:text="'Lastname: ' + ${user.lastName}" />
     </div>
 	<div>
     	<p th:text="'Age: ' + ${user.age}" />	
@@ -30,6 +89,8 @@
 	<div>
     	<p th:text="'Username: ' + ${user.username}" />	
     </div>
-
+    	<div>
+    	<p th:text="'Password: ' + ${user.password}" />	
+    </div>
 </body>
-</html> 
+</html>
