--- a/galleria/src/main/resources/templates/accessoadmin.html
+++ b/galleria/src/main/resources/templates/accessoadmin.html
@@ -2,28 +2,28 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-	<link rel="stylesheet" href="/lib/bootstrap.min.css">
+    <meta charset="utf-8"/>
+<!--     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><meta/>
+    <meta name="description" content=""><meta/>
+    <meta name="author" content=""><meta/> -->
+<!-- 	<link rel="stylesheet" href="/lib/bootstrap.min.css">
     <title>Galleria d'arte</title>
 
-    <!-- Bootstrap Core CSS -->
+    Bootstrap Core CSS
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+    Custom Fonts
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <!-- Plugin CSS -->
+    Plugin CSS
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
-    <!-- Theme CSS -->
+    Theme CSS
     <link href="css/creative.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/index.css" />
+		<link rel="stylesheet" href="css/index.css" /> -->
 </head>
 <body>
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
