--- a/galleria/src/main/resources/templates/opera/opere.html
+++ b/galleria/src/main/resources/templates/opera/opere.html
@@ -96,6 +96,12 @@
 										th:href="@{/opera/infoOpera(id=${opera.id})}"></a>
 									<div class="space"></div>
 								</h2>
+								<th:foreach th:each="opera : ${opere}">
+							<li><a th:href="@{/opera/cancella(id=${opera.id})}"><span><input
+							type="submit" name="submit" value="cancella" /></span></a>
+							<a th:href="@{/opera/modificaO(id=${opera.id})}"><span><input
+						type="submit" name="submit" value="modifica" /></span></a></li>
+		</th:foreach>
 							</div>
 						</div>
 					</div>
