--- a/galleria/src/main/resources/templates/accessoadmin.html
+++ b/galleria/src/main/resources/templates/accessoadmin.html
@@ -30,24 +30,14 @@
                 <ul class="nav navbar-nav navbar-left">
                     
                     <li>
-                        <a class="page-scroll" href="/user/artisti">Artists</a>
+                        <a class="page-scroll" href="/admin/artisti">List of artists</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/citazioni">Quotes</a>
                     </li>
                      
                     <li>
-                        <a class="page-scroll" href="/user/opere">Works of art</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/accedi">Register here!</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/accedi">Login</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/accedi_admin">Administrator</a>
+                        <a class="page-scroll" href="/admin/opere">Works of art</a>
                     </li>
                     <li sec:authorize="isAuthenticated()">
 											<a class="page-scroll" href="/logout">logout</a>
@@ -69,7 +59,7 @@
 					<blockquote class="blockquote blockquote">
 	<h1 class="text-left">
 	<em>Admin page</em></h1>
-<footer class="blockquote-footer">Accesso al <cite title="Source Title"> Administratore</cite></footer>
+
 </blockquote>
 
 <br></br>
