--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -2,71 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Artista</title>
-
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
-
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
+<style> html { 
+  background: url('https://www.artsfon.com/pic/201602/1920x1200/artsfon.com-81003.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
 
 </head>
 
-<body style="background-image: url('http://picslife.ru/wp-content/uploads/2012/11/krasivyie-kartinyi-maslom-hudozhnika-leonida-afremova_2.jpg')">
+<body>
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span> Menu <i
-						class="fa fa-bars"></i>
-				</button>
 				<a class="navbar-brand page-scroll" href="/">HOME</a>
-			</div>
+			
 
 			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     
                     <li>
-                        <a class="page-scroll" href="/artista">Artista</a>
+                        <a class="page-scroll" href="/admin/opere">List of Works of art</a>
                     </li>
                     <li>
-                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                        <a class="page-scroll" href="/logout">Logout</a>
                     </li>
-                   
-			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-					
-					<li><a class="page-scroll" href="/ui">AMMINISTRATORE</a></li> 
-                    <li>
-                        <a class="page-scroll" href="/opere">Opere</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/user">Registrati</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/login">Autenticazione</a>
-                    </li>
+
              
                 </ul>
                 </div>
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
+
 	<br></br><br></br><br></br><br></br>
 	<div>
 		<div class="container tim-container">
@@ -74,7 +39,7 @@
 <blockquote class="blockquote blockquote">
 <h1 class="text-left">
 				<em>Artist</em></h1>
-				  <footer class="blockquote-footer"><cite title="Source Title">ARtista</cite></footer>
+				  
 </blockquote>
 			<ul>
 				<div th:each="artista : ${artisti}">
@@ -110,31 +75,6 @@
 			</div>
 		</div>
 	</div>
-<!-- <div style="text-align: center">
-	<br></br>
-	<br></br>
-	<h1>Elenco Artisti Ordinati Alfabeticamente<select
-					name="dropAnno" id="dropAnno"
-					th:field="*{artista.annoNascita}">
-					<option value="0">Order By</option>
-					<option value="dataNascita">dataNascita</option></select>
-</h1>
-	<p>
-		<span th:text="#{label.nome}">Lista artisti</span>
-	</p>
-	<br></br>
-	<br></br>
-	<br></br>
-	<ul>
-		<th:foreach th:each="artista : ${artisti}">
-			<li><a th:text="${artista.nome} +' '+ ${artista.cognome}"
-				th:href="@{/artista/resultsartista(id=${artista.id})}"></a> <a
-				 th:href="@{/artista/cancella(id=${artista.id})}"> <span> <input
-						type="submit" name="submit" value="cancella" /></span></a></li> 
-		</th:foreach>
-	</ul>
-	<a th:href="@{/}"> <span><input
-						type="submit" name="submit" value="ritorna alla Home" /></span></a>
-</div> -->
+
 </body>
 </html>
