--- a/galleria/src/main/resources/templates/artista/formartista.html
+++ b/galleria/src/main/resources/templates/artista/formartista.html
@@ -1,84 +1,52 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Artista</title>
+<style> html { 
+  background: url('https://www.artsfon.com/pic/201602/1920x1200/artsfon.com-81003.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+h1 {
+    font-size: 250%;
+}
 
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
+h2 {
+    font-size: 200%;
+}
 
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
-
+p {
+    font-size: 100%;
+}
+</style>
 </head>
 
-<body style="background-image: url('http://picslife.ru/wp-content/uploads/2012/11/krasivyie-kartinyi-maslom-hudozhnika-leonida-afremova_2.jpg')">
+<body text="white">
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span> Menu <i
-						class="fa fa-bars"></i>
-				</button>
-				<a class="navbar-brand page-scroll" href="/">HOME</a>
-			</div>
-
-			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
+	<ul>
                     
                     <li>
-                        <a class="page-scroll" href="/artista">Artista</a>
+                        <a class="page-scroll" href="/admin/artisti">List of artists</a>
                     </li>
-                    <li>
-                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-                    </li>
+         	 		<li><a class="page-scroll" href="/admin/opere">List of works of art</a></li>
                    
-			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-					
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
+			 		<li><a class="page-scroll" href="/opere">Insert a work of art</a></li>
                     <li>
-                        <a class="page-scroll" href="/opere">Opere</a>
+                        <a class="page-scroll" href="/logout">Logout</a>
                     </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/user">Registrati</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/login">Autenticazione</a>
-                    </li>
-             
-                </ul>
-                </div>
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
-	
-<div class="main">
+	</ul>
 
 <br></br><br></br>		
 <blockquote class="blockquote blockquote">
-<h1 class="text-left">
-				<em>Artist</em></h1>
-				  <footer class="blockquote-footer"><cite title="Source Title">Artista</cite></footer>
+<font size="12"><h1 align="center" class="text-left">
+				<em>Artist</em></h1></font>
+				  
 </blockquote>
 
 	
-	<form class="form-horizontal" action="#" th:action="@{/artista}" th:object="${artista}"
+	<form class="form-horizontal" action="#" th:action="@{/admin/artistainfo}" th:object="${artista}"
 		method="post">
 		
 			<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
@@ -87,10 +55,10 @@
 
 				<input type="hidden" th:field="*{id}" />
 				
-		<div>
+		<div align="center">
 			<div class="form-group"
 					th:class="${#fields.hasErrors('nome')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-4 control-label">Nome:</label>
+					<label class="col-sm-4 control-label">Firstname:</label>
 					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{nome}"
 							th:errorclass="has-error" /> <span class="help-block">
@@ -102,7 +70,7 @@
 				</div>
 			<div class="form-group"
 					th:class="${#fields.hasErrors('cognome')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-4 control-label">Cognome:</label>
+					<label class="col-sm-4 control-label">Lastname:</label>
 					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{cognome}"
 							th:errorclass="has-error" /> <span class="help-block">
@@ -114,7 +82,7 @@
 				</div>
 			<div class="form-group"
 					th:class="${#fields.hasErrors('nazionalita')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-4 control-label">Nazionalita:</label>
+					<label class="col-sm-4 control-label">Nationality:</label>
 					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{nazionalita}"
 							th:errorclass="has-error" /> <span class="help-block">
@@ -127,7 +95,7 @@
 			<div>
 					<div class="form-group"
 					th:class="${#fields.hasErrors('annoNascita')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-4 control-label">Anno Nascita:</label>
+					<label class="col-sm-4 control-label">Date of birth:</label>
 					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{annoNascita}"
 							th:errorclass="has-error" /> <span class="help-block">
@@ -138,25 +106,10 @@
 					</div>
 				</div>
 			
-<!-- 					 <select id="anno"
-          			name="anno" >
-				    <option>January</option>      
-				    <option>February</option>      
-				    <option>March</option>      
-				    <option>April</option>      
-				    <option>May</option>      
-				    <option>June</option>      
-				    <option>July</option>      
-				    <option>August</option>      
-				    <option>September</option>      
-				    <option>October</option>      
-				    <option>November</option>      
-				    <option>December</option>      
-  					</select> -->
   				
 			<div class="form-group"
 					th:class="${#fields.hasErrors('annoMorte')} ? 'form-group has-error' : 'form-group'">
-					<label class="col-sm-4 control-label">Anno Morte:</label>
+					<label class="col-sm-4 control-label">Date of death:</label>
 					<div class="col-sm-2">
 						<input type="text" class="form-control" th:field="*{annoMorte}"
 							th:errorclass="has-error" /> <span class="help-block">
@@ -165,16 +118,7 @@
 							</ul>
 						</span>
 					</div>
-				</div>
-				
-				<!-- <div class="form-group">
-						<label class="col-sm-4 control-label glyphicon glyphicon-camera"> Url: </label>
-						<div class="col-sm-5">
-							<input	type="text" class="form-control" th:field="*{url}" />			
-							<span th:if="${#fields.hasErrors('url')}" th:text="#{label.mandatory}">Error</span>
-							</div>
-		 				</div> -->
-				
+				</div>			
 		</div>
 		
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -191,12 +135,12 @@
 		<div class="overlayer">
 			<div class="container">
 				<div class="row">
-					<div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
+					<div align="center" class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
 				</div>
 			</div>
 		</div>
 	</div>
-  </div>	      
+ 	      
 	
 	
 	
