--- a/galleria/src/main/resources/templates/error.html
+++ b/galleria/src/main/resources/templates/error.html
@@ -3,37 +3,25 @@
 
 <head>
 <meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Opere</title>
-
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
-
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
-
+<style> html { 
+  background: url('https://s-media-cache-ak0.pinimg.com/originals/5b/97/22/5b97226057c25c682bfe701638d79939.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
 </head>
 
-<body id="page-top" style="background-image: url('https://s-media-cache-ak0.pinimg.com/originals/5b/97/22/5b97226057c25c682bfe701638d79939.png')">
+<body >
 <div class="row">
 <br></br><br></br><br></br><br></br><br></br>
     <h1 align="center" class="indigo-text center" th:text="${error}">Not found</h1>
 
     <p align="center" class="col s12 center" ><!-- th:text="${message}" -->
-     <font size="12">  The resource you are looking for doesn't exist!
+     <font size="12"> 
 <br></br><br></br><br></br><br></br><br></br>
-                         <center><a href="/"><large>Home</large></a></center>
+                      <div align="center"><a href="/"><b>Home</b></a></div>
      </font> 
     </p>
     			<font size="12">	 </font> 
