--- a/galleria/src/main/resources/templates/opera/formO.html
+++ b/galleria/src/main/resources/templates/opera/formO.html
@@ -43,25 +43,12 @@
                 <ul class="nav navbar-nav navbar-left">
                     
                     <li>
-                        <a class="page-scroll" href="/artista">Artista</a>
-                    </li>
-                    <li>
-                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+                        <a class="page-scroll" href="/admin/artista">Insert an artist</a>
                     </li>
                    
-			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
+			 		<li><a class="page-scroll" href="/admin/opere">Works of art list</a></li>
 					
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-                    <li>
-                        <a class="page-scroll" href="/opere">Opere</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/user">Registrati</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/login">Autenticazione</a>
-                    </li>
+					<li><a class="page-scroll" href="/logout">logout</a></li> 
              
                 </ul>
                 </div>
