lavori finali sui collegamenti

--- a/galleria/src/main/resources/templates/artista/resultsArtista.html
+++ b/galleria/src/main/resources/templates/artista/resultsArtista.html
@@ -30,12 +30,8 @@
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span> Menu <i
-						class="fa fa-bars"></i>
-				</button>
-				<a class="navbar-brand page-scroll" href="index.html">HOME</a>
+				
+				<a class="navbar-brand page-scroll" href="/">HOME</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,26 +39,12 @@
                 <ul class="nav navbar-nav navbar-left">
                     
                     <li>
-                        <a class="page-scroll" href="/artista">Artista</a>
+                        <a class="page-scroll" href="/user/artisti">List of artists</a>
                     </li>
-                    <li>
-                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
+   
+             <li>
+                        <a class="page-scroll" href="/user/opere">List of works of art</a>
                     </li>
-                   
-			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-					
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-                    <li>
-                        <a class="page-scroll" href="/opere">Opere</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/user">Registrati</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/login">Autenticazione</a>
-                    </li>
-             
                 </ul>
                 </div>
 			
@@ -119,17 +101,7 @@
 			</ul>
 			</table>
 			<br><br></br></br>
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="pager">
- 							<li class="previous"><a href="/artista">Ritorna indietro</a></li>
-							</ul>
-			</div>
-			
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="pager">
- 							<li class="previous"><a href="/">Home</a></li>
-							</ul>
-			</div>
+		
 	<br><br></br></br><br></br><br></br><br></br><br><br></br></br><br></br><br></br><br></br>
         </div>
       </div>  
