risolti altri collegamenti

--- a/galleria/src/main/resources/templates/artista/adminArtisti.html
+++ b/galleria/src/main/resources/templates/artista/adminArtisti.html
@@ -64,7 +64,7 @@ p,ul {
 					
 								<h2 class="text-left">
 									<a th:text="${artista.nome} +' '+ ${artista.cognome}"
-										th:href="@{/artista/resultsartista(id=${artista.id})}"></a>
+										th:href="@{/user/artista/resultsartista(id=${artista.id})}"></a>
 									<div class="space"></div>
 								</h2>
 							
