--- a/galleria/src/main/resources/templates/opera/opere.html
+++ b/galleria/src/main/resources/templates/opera/opere.html
@@ -47,7 +47,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-4">
 
-							<a th:href="@{/opera/infoOpera(id=${opera.id})}">
+							<a th:href="@{/user/opera/infoOpera(id=${opera.id})}">
 					
 								<img th:src="${opera.url}"
 								style="height: 236px; width: 304" class="img-circle" />
