--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -46,7 +46,7 @@
 					
 								<h2 class="text-left">
 									<a th:text="${artista.nome} +' '+ ${artista.cognome}"
-										th:href="@{/artista/resultsartista(id=${artista.id})}"></a>
+										th:href="@{/user/artista/resultsartista(id=${artista.id})}"></a>
 									<div class="space"></div>
 								</h2>
 							
