--- a/galleria/src/main/resources/templates/opera/formO.html
+++ b/galleria/src/main/resources/templates/opera/formO.html
@@ -3,38 +3,16 @@
 
 <head>
 <meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Opere</title>
-
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
-
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
 
 </head>
 
-<body id="page-top" style="background-image: url('http://cameralabs.org/media/camera/avgust/6avgust/53_19285bd27f46ba1b999c6467fa5f834f.jpg')">
+<body>
  <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
             <div class="navbar-header">
-      			<a class="navbar-brand" >Midnight</a>
-   				 </div>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
+      			</div>
+                
                 <a class="navbar-brand page-scroll" href="/">Home</a>
             </div>
 
@@ -67,7 +45,7 @@
 </blockquote>			
 		<div>
 			<form class="form-horizontal" th:object="${opera}"
-				th:action="@{opera}" method="post">
+				th:action="@{/admin/opera}" method="post">
 				
 				<div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
 					<p th:text="#{form.hasErrors}">Error Message</p>
@@ -148,7 +126,7 @@
     </form>
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="pager">
- 							<li class="previous"><a href="/opere">Catalogo</a></li>
+ 							<li class="previous"><a href="/admin/opere">Catalogo</a></li>
 							</ul>
 			</div>
 			
