--- a/galleria/src/main/resources/templates/opera/infoOpera.html
+++ b/galleria/src/main/resources/templates/opera/infoOpera.html
@@ -43,25 +43,17 @@
                 <ul class="nav navbar-nav navbar-left">
                     
                     <li>
-                        <a class="page-scroll" href="/artista">Artista</a>
-                    </li>
-                    <li>
-                        <li><a class="page-scroll" href="/opera">Opera da inserire</a></li>
-                    </li>
-                   
-			 		<li><a class="page-scroll" href="/opere">Opere inserite</a></li>
-					
-					<li><a class="page-scroll" href="/admin">AMMINISTRATORE</a></li> 
-                    <li>
-                        <a class="page-scroll" href="/opere">Opere</a>
+                        <a class="page-scroll" href="/user/artisti">List of artists</a>
                     </li>
                     
                     <li>
-                        <a class="page-scroll" href="/user">Registrati</a>
+                        <a class="page-scroll" href="/user/opere">List of works of art</a>
                     </li>
+                    
                     <li>
-                        <a class="page-scroll" href="/login">Autenticazione</a>
+                        <a class="page-scroll" href="/logout">Logout</a>
                     </li>
+                    
              
                 </ul>
                 </div>
@@ -112,7 +104,7 @@
     	<p th:text="'Descrizione: ' + ${opera.titolo}" />
     </div>	</div>
  -->			
-			    <a th:href="@{/opera}"> 
+			    <a th:href="@{/admin/opera}"> 
 			    <span>
 			    <button type="submit" class="btn btn-primary">Torna indietro</button>
 			    </span></a>
