rifatta pagina di presentazione

--- a/galleria/src/main/resources/static/css/accesso.css
+++ b/galleria/src/main/resources/static/css/accesso.css
@@ -4,7 +4,7 @@
 <style>
 body {margin:0;}
  html { 
-  background: url('https://s-media-cache-ak0.pinimg.com/originals/85/fe/f7/85fef7b1a4188f8a63f29a28eaa6fd09.jpg') no-repeat center center fixed; 
+  background: url('http://hanksrepublic.com/wp-content/uploads/2017/05/tasty-wallpapers-art-art-wallpapers.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
