--- a/galleria/src/main/resources/templates/accesso.html
+++ b/galleria/src/main/resources/templates/accesso.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-<link rel="stylesheet" href="css/index.css" />
+<link rel="stylesheet" href="css/accesso.css" />
     <title></title>
 </head>
 <body>
