tentativo di sistemare i menu con un menu uniforme, abilitare i collegamenti

--- a/galleria/src/main/resources/templates/accesso.html
+++ b/galleria/src/main/resources/templates/accesso.html
@@ -10,10 +10,9 @@
   <a href="/">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
-  <a href="#about">About</a>
   <a class="active" href="accedi">Login/SignUp</a>
  <!--  <a href="signUp">Sign-up</a> -->
-  <a href="accedi_admin"><b>Amministratore</b></a>
+  <a href="accedi_admin"><b>Administrator</b></a>
   <a sec:authorize="isAuthenticated()" href="/logout">Logout</a>								
                     
 </div>
