--- a/galleria/src/main/resources/templates/accessoadmin.html
+++ b/galleria/src/main/resources/templates/accessoadmin.html
@@ -9,13 +9,12 @@
 
 <div class="topnav">
   <a href="/">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-   <a href="admin/artisti">Artists</a>
+  <a href="/news">News</a>
+  <a href="/contacts">Contact</a>
+  <a href="admin/artisti">Artists</a>
   <a href="admin/opere">Works of art</a>
  <!--  <a href="signUp">Sign-up</a> -->
-  <a class="active" href="accedi_admin"><b>Amministratore</b></a>
+  <a class="active" href="accedi_admin"><b>Administrator</b></a>
   <a sec:authorize="isAuthenticated()" href="/logout">Logout</a>								
                     
 </div>
