--- a/galleria/src/main/resources/templates/contacts.html
+++ b/galleria/src/main/resources/templates/contacts.html
@@ -2,12 +2,23 @@
 <html>
 <head>
 <meta charset="ISO-8859-1"/>
-<title>Contacts</title>
+<link rel="stylesheet" href="css/index.css" />
+<title>News</title>
 </head>
-<body>
-<a href="/">Home</a>
+<body text="white">
+<div class="topnav">
+  <a href="/">Home</a>
+  <a href="/news">News</a>
+  <a class="active" href="/contacts">Contact</a>
+  <a href="/user/artisti">Artists</a>
+  <a href="/user/opere">Work of art</a>
+  <a href="/accedi">Register here</a>
+  <a href="/accedi">Login/Logout</a>
+  <a href="/accedi_admin">Admin</a>
+</div>
 <br></br>
-Giacomo Bonanni 3801277869
+<font size="7">Giacomo Bonanni 3801277869<br></br>
 Sorin Oancea
+</font>
 </body>
 </html>
