--- a/galleria/src/main/resources/templates/news.html
+++ b/galleria/src/main/resources/templates/news.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 <meta charset="ISO-8859-1"/>
+<link rel="stylesheet" href="css/index.css" />
 <title>News</title>
 </head>
-<body>
-
+<body text="white">
+<div class="topnav">
+  <a href="/">Home</a>
+  <a class="active" href="/news">News</a>
+  <a href="/contacts">Contact</a>
+  <a href="/user/artisti">Artists</a>
+  <a href="/user/opere">Work of art</a>
+  <a href="/accedi">Register here</a>
+  <a href="/accedi">Login/Logout</a>
+  <a href="/accedi_admin">Admin</a>
+</div>
+<font size="8">
+Il progetto e' stato organizzato dividendosi i compiti nel seguente modo:<br></br>
+Bonanni G. -> autenticazione (login/logout/ruoli), gestione dei collegamenti tra le pagine attraverso i controller, gestione degli artisti<br></br>
+Oancea S. -> css e bootstrap delle pagine, gestione delle opere
+</font>
 </body>
 </html>
