--- a/galleria/src/main/resources/templates/artista/artisti.html
+++ b/galleria/src/main/resources/templates/artista/artisti.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-<meta charset="utf-8" />
+<meta charset="ISO-8859-1"/>
+<link rel="stylesheet" href="css/index.css" />
+<title>News</title>
 <style> html { 
   background: url('https://www.artsfon.com/pic/201602/1920x1200/artsfon.com-81003.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -12,35 +14,20 @@
 </style>
 
 </head>
-
-<body>
-
-				<a class="navbar-brand page-scroll" href="/">HOME</a>
+<body text="white">
+<div class="topnav">
+  <a href="/">Home</a>
+  <a href="/news">News</a>
+  <a class="active" href="/contacts">Contact</a>
+  <a href="/user/artisti">Artists</a>
+  <a href="/user/opere">Work of art</a>
+  <a href="/accedi">Register here</a>
+  <a href="/accedi">Login/Logout</a>
+  <a href="/accedi_admin">Admin</a>
+</div>
+<font size="9">
+<div align="center">List of artists</div>
 			
-
-			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
-                    
-                    <li>
-                        <a class="page-scroll" href="/admin/opere">List of Works of art</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/logout">Logout</a>
-                    </li>
-
-             
-                </ul>
-                </div>
-
-	<br></br><br></br><br></br><br></br>
-	<div>
-		<div class="container tim-container">
-			
-<blockquote class="blockquote blockquote">
-<h1 class="text-left">
-				<em>Artist</em></h1>
-				  
-</blockquote>
 			<ul>
 				<div th:each="artista : ${artisti}">
 					
@@ -52,9 +39,7 @@
 							
 				</div>
 			</ul>
-		</div>
-		<div class="space"></div>
-	</div>
+	
 
 	<div class="footer">
 		<div class="overlayer">
@@ -65,6 +50,6 @@
 			</div>
 		</div>
 	</div>
-
+</font>
 </body>
 </html>
