--- a/galleria/src/main/resources/templates/opera/infoOpera.html
+++ b/galleria/src/main/resources/templates/opera/infoOpera.html
@@ -1,72 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-<meta charset="utf-8" />
-<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon.png" />
-<link rel="icon" type="image/png" href="img/apple-touch-icon.png" />
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<title>Galleria/Home/Opere</title>
-
-<meta
-	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'
-	name='viewport' />
-<meta name="viewport" content="width=device-width" />
-
-<link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
-<link href="css/gsdk.css" rel="stylesheet" />
-<link href="css/demo.css" rel="stylesheet" />
-<link href="css/siw.css" rel="stylesheet" />
-<!--     Font Awesome     -->
-<link href="vendor/bootstrap/css/font-awesome.css" rel="stylesheet" />
-<link href='http://fonts.googleapis.com/css?family=Grand+Hotel'
-	rel='stylesheet' type='text/css' />
-
+<link rel="stylesheet" href="css/accesso.css" />
+    <title></title>
 </head>
-
-<body id="page-top" style="background-image: url('https://www.premioceleste.it/_files/opere/2013_53521_199648.jpg')">
-
-	<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				
-				<a class="navbar-brand page-scroll" href="/">HOME</a>
-			</div>
-
-			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-left">
+<body>
+<div class="topnav">
+  <a href="/">Home</a>
+  <a href="/news">News</a>
+  <a href="/contacts">Contact</a>
+  <a class="active" href="/user/opere">List of works of art</a>
+  <a sec:authorize="isAuthenticated()" href="/logout">Logout</a>								
                     
-                    <li>
-                        <a class="page-scroll" href="/user/artisti">List of artists</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/user/opere">List of works of art</a>
-                    </li>
-                    
-                    <li>
-                        <a class="page-scroll" href="/logout">Logout</a>
-                    </li>
-                    
-             
-                </ul>
-                </div>
-			
-		</div>
-		
-	</nav>
-
-
-<div>
-		<div class="container tim-container">
-	<blockquote class="blockquote blockquote">
-            <h1 class="text-left">
-	<br></br>
-			<em>Art</em></h1>
-		  <footer class="blockquote-footer">Hai aggiunto la seguente<cite title="Source Title"> Opera</cite></footer>
-		</blockquote>
+</div>
+	
         <ul>
            
 		<table class="table table-hover">
@@ -100,22 +48,11 @@
     	<p th:text="'Descrizione: ' + ${opera.titolo}" />
     </div>	</div>
  -->			
-			    <a th:href="@{/admin/opera}"> 
+<!-- 			    <a th:href="@{/admin/opera}"> 
 			    <span>
 			    <button type="submit" class="btn btn-primary">Torna indietro</button>
-			    </span></a>
+			    </span></a> -->
 	</ul>
-        </div>
-      </div>  
-      <div class="footer">
-		<div class="overlayer">
-			<div class="container">
-				<div class="row">
-					<div class="credits">&copy; Giacomo Bonnani---Sorin Oancea</div>
-				</div>
-			</div>
-		</div>
-	</div>
-        
+
 </body>
 </html>
