--- a/galleria/src/main/resources/templates/artista/adminArtisti.html
+++ b/galleria/src/main/resources/templates/artista/adminArtisti.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
-<style> html { 
+<style> /* html { 
   background: url('https://s-media-cache-ak0.pinimg.com/originals/c9/8b/7a/c98b7a769a04b08313f0d600ed8857e0.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+} */
 h1 {
     font-size: 250%;
 }
